# godorama

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  RAG_PLAN.md  README.md
.github/workflows/: ci.yml
demo/: main.gd  main.tscn  project.godot
demo/rag_fixtures/: godot.txt  llama.txt  sqlite.md
docs/: API.md  ARCHITECTURE.md  BUILD.md  MULTIMODAL_PLAN.md  RAG_API.md  RAG_ARCHITECTURE.md  RAG_EVALUATION.md
include/godot_llama/: chat_template_engine.hpp  error.hpp  llama_context_handle.hpp  llama_lora_adapter_handle.hpp  llama_model_handle.hpp  llama_multimodal_handle.hpp  llama_params.hpp  llama_position_layout.hpp  llama_sampler_handle.hpp  request.hpp  utf8.hpp  worker.hpp
include/godot_llama/rag/: corpus.hpp  factories.hpp  interfaces.hpp  mock_embedder.hpp  types.hpp
src/core/: error.cpp  request.cpp  utf8.cpp  worker.cpp
src/core/rag/: corpus.cpp  dense_retriever.cpp  deterministic_chunker.cpp  factories.cpp  grounded_context_packer.cpp  libsql_corpus_store.cpp  llama_embedder.cpp  mock_embedder.cpp  noop_reranker.cpp  sqlite_corpus_store.cpp  types.cpp
src/godot/: llama_eval_session.cpp  llama_eval_session.hpp  llama_lora_adapter_config.cpp  llama_lora_adapter_config.hpp  llama_model_config.cpp  llama_model_config.hpp  llama_multimodal_config.cpp  llama_multimodal_config.hpp  llama_session.cpp  llama_session.hpp  rag_answer_session.cpp  rag_answer_session.hpp  rag_corpus.cpp  rag_corpus.hpp  rag_corpus_config.cpp  rag_corpus_config.hpp  rag_utils.cpp  rag_utils.hpp  register_types.cpp  register_types.hpp
src/llama/: chat_template_engine.cpp  llama_context_handle.cpp  llama_lora_adapter_handle.cpp  llama_model_handle.cpp  llama_multimodal_handle.cpp  llama_params.cpp  llama_position_layout.cpp  llama_sampler_handle.cpp
tests/integration/: CMakeLists.txt  rag_evaluation.cpp  test_rag_pipeline.cpp
tests/unit/: CMakeLists.txt  test_chat_template_engine.cpp  test_context_handle.cpp  test_error.cpp  test_libsql_local_store.cpp  test_llama_position_layout.cpp  test_model_handle.cpp  test_multimodal_handle.cpp  test_params.cpp  test_rag_chunker.cpp  test_rag_retriever.cpp  test_rag_types.cpp  test_request.cpp  test_sampler_handle.cpp  test_utf8.cpp  test_worker_multimodal.cpp
